feat : ajout de la méthode pour récuperer la valeur maximal de ponderation des critères de selection d'une period ainsi que sa documentation swagger
